fixed z-index issue

--- a/src/styles/components/_stage-settings.scss
+++ b/src/styles/components/_stage-settings.scss
@@ -7,6 +7,7 @@
     background: #fff;
     border: 2px solid $color-p3;
     border-radius: 0.25em;
+    z-index: 20;
 
     input[type="checkbox"] {
         width: auto;
